--- a/data_compression/makefile
+++ b/data_compression/makefile
@@ -3,4 +3,4 @@ HUFFMAN_SOURCES=adaptative_huffman.c adaptative_huffman.h
 SOURCES=main.c ${HUFFMAN_SOURCES}
 
 all:
-	${CC} ${SOURCES} -Wall
+	${CC} -g ${SOURCES} -Wall
