--- a/data_compression/makefile
+++ b/data_compression/makefile
@@ -1,6 +1,10 @@
 CC=gcc
 HUFFMAN_SOURCES=adaptative_huffman.c adaptative_huffman.h
-SOURCES=main.c ${HUFFMAN_SOURCES}
+OTHER_SOURCES=log.c log.h
+SOURCES=main.c ${HUFFMAN_SOURCES} ${OTHER_SOURCES}
 
 all:
-	${CC} -g ${SOURCES} -Wall
+	${CC} -g ${SOURCES} -Wall -DINFO
+
+debug:
+	${CC} -g ${SOURCES} -Wall -DDEBUG
